# equity-research-v1

./: .gitignore  README.md  pyproject.toml
config/: scheme_aliases.json
data/raw/2026-05/: 10818f38-bandhan-small-cap-fund-31-may-26.xlsx  Axis.xlsx  Nippon.xls  Scheme Portfolio Details 31-05-2026.xlsx  invesco-india-smallcap-fund_may_2026_equity.xlsx  quant_small_cap.xlsx  sbi.xlsx
src/equity_research/: __init__.py  config.py  consolidator.py  logging_utils.py  normalization.py  pipeline.py
src/equity_research/parsers/: __init__.py  amc.py  base.py  generic.py  hdfc.py  nippon.py  registry.py  sbi.py
