[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-research-v1"
version = "0.1.0"
description = "Pipeline for standardizing Indian mutual fund small cap holdings."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
